<resources>
    <string name="app_name">LoginAndRegistration</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="delete">delete</string>
</resources>